fluxcd/02-applications/httpbin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    name: httpbin
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/component: external-service
    gateway.networking.k8s.io/allowed: "true"
