fluxcd/02-applications/httpbin/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: httpbin-external
  namespace: httpbin
  labels:
    kubernetes.io/service-name: httpbin
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "54.82.157.242"
      - "54.145.142.3"
      - "52.6.193.180"
    conditions:
      ready: true
