fluxcd/02-applications/httpbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
