fluxcd/02-applications/httpbin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  hostnames:
    - httpbin.civilsnut.se
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
